﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.0.1. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Added new character sets to mysqlnd, which are available in MySQL 5.5
  (Andrey)

- Fixed MOPS-2010-24, fix string validation. (Pierre)
- Changed deprecated ini options on startup from E_WARNING to E_DEPRECATED. 
  (Kalle)
- Changed the $context parameter on copy() to actually have an effect. (Kalle)
- Fixed possible crash in mssql_fetch_batch(). (Kalle)

- Fixed bug #52655 (SimpleXMLIterator supports ArrayAccess without implementing 
  the interface). (Kalle)
- Fixed bug #52654 (mysqli doesn't install headers with structures it uses).
  (Andrey)
- Fixed bug #52636 (php_mysql_fetch_hash writes long value into int). 
  (Kalle, rein at basefarm dot no)
- Fixed bug #52613 (crash in mysqlnd after hitting memory limit). (Andrey)
- Fixed bug #52599 (iconv output handler outputs incorrect content type
  when flags are used). (Ilia)
- Fixed bug #52573 (SplFileObject::fscanf Segmentation fault). (Felipe)
- Fixed bug #52546 (pdo_dblib segmentation fault when iterating MONEY values).
  (Felipe)
- Fixed bug #52534 (var_export array with negative key). (Felipe)
- Fixed bug #52508 (newline problem with parse_ini_file+INI_SCANNER_RAW).
  (Felipe)
- Fixed bug #52487 (PDO::FETCH_INTO leaks memory). (Felipe)
- Fixed bug #52484 (__set() ignores setting properties with empty names).
  (Felipe)
- Fixed bug #52468 (wddx_deserialize corrupts integer field value when left
  empty). (Felipe)
- Fixed bug #52436 (Compile error if systems do not have stdint.h)
  (Sriram Natarajan)
- Fixed bug #52433 (Call to undefined method mysqli::poll() - must be static).
  (Andrey)
- Fixed bug #52417 (MySQLi build failure with mysqlnd on MacOS X). (Andrey)